fix: label alignment

--- a/src/components/composition/FormGroup/FormGroup.module.scss
+++ b/src/components/composition/FormGroup/FormGroup.module.scss
@@ -5,7 +5,9 @@
 
 .form-group {
   &__label {
+    column-gap: spacing.$horizontal-sm;
     display: grid;
+    grid-auto-rows: min-content;
     grid-template-columns: 1fr auto;
   }
 
